--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_HOME_DIRECTORY}")
 
 find_package (GSL REQUIRED)
 
-set (CMAKE_CXX_FLAGS "${GSL_CXX_FLAGS} -O3 -Wall")
+set (CMAKE_CXX_FLAGS "${GSL_CXX_FLAGS} -g -O3 -Wall")
 
 SET(INCLUDE_DIRS ${GSL_INCLUDE_DIR})
 SET(LIBS ${GSL_LIBRARIES})
