--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,11 @@ cmake_policy(SET CMP0042 NEW)
 set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_HOME_DIRECTORY}")
 
 find_package (GSL REQUIRED)
+find_package (ZLIB REQUIRED)
+
+if ( ZIB_FOUND )
+    include_directories( ${ZLIB_INCLUDE_DIRS} )
+endif ( ZIB_FOUND)
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GSL_CXX_FLAGS} -g -O3 -Wall")
 
