--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ project (iSS)
 cmake_policy(SET CMP0042 NEW)
 
 set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_HOME_DIRECTORY}")
+set (CMAKE_INSTALL_PREFIX "${CMAKE_HOME_DIRECTORY}") 
+set (CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib") 
 
 find_package (GSL REQUIRED)
 find_package (ZLIB REQUIRED)
