--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,7 +4,7 @@ set (SOURCES
   ParameterReader.cpp
   RandomVariable1DArray.cpp
   RandomVariable2DArray.cpp
-  RandomVariable.cpp
+  Random.cpp
   TableFunction.cpp
   Table.cpp
   emissionfunction.cpp
