--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,8 +20,8 @@ if ( ZIB_FOUND )
     include_directories( ${ZLIB_INCLUDE_DIRS} )
 endif ( ZIB_FOUND)
 
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GSL_CXX_FLAGS} -g -O3 -Wall -std=c++11")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall -Wextra -Wmissing-declarations -Wpointer-arith -Wshadow -Wuninitialized -Winit-self -Wundef -Wcast-align -Wformat=2 -Werror=switch -mfpmath=sse")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${GSL_CXX_FLAGS} -g -O3 -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall -Wextra -Wpointer-arith -Wshadow -Wuninitialized -Winit-self -Wundef -Wcast-align -Werror=switch")
 
 SET(INCLUDE_DIRS ${GSL_INCLUDE_DIR})
 SET(LIBS ${GSL_LIBRARIES})
