--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Sampling Test flow ideal
         run: |
           $GITHUB_WORKSPACE/tests/RunAutoTestIdeal2.sh
-      - name: Sampling Test static with Bulk viscosity
+      - name: Sampling Test static with bulk viscosity
         run: |
           $GITHUB_WORKSPACE/tests/RunAutoTestViscous1.sh
+      - name: Sampling Test static with shear viscosity
+        run: |
+          $GITHUB_WORKSPACE/tests/RunAutoTestViscous2.sh
