add the automated test for finite muB

--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Sampling Test flow ideal
         run: |
           $GITHUB_WORKSPACE/tests/RunAutoTestIdeal2.sh
+      - name: Sampling Test static with finite net baryon density
+        run: |
+          $GITHUB_WORKSPACE/tests/RunAutoTestIdeal3.sh
       - name: Sampling Test static with bulk viscosity
         run: |
           $GITHUB_WORKSPACE/tests/RunAutoTestViscous1.sh
