--- a/.github/workflows/BuildTest.yml
+++ b/.github/workflows/BuildTest.yml
@@ -56,6 +56,14 @@ jobs:
         run: |
           source venv/bin/activate
           $GITHUB_WORKSPACE/tests/RunAutoTestViscous2.sh
+      - name: Sampling Test static with bulk viscosity (mu_B = 0, newRTA)
+        run: |
+          source venv/bin/activate
+          $GITHUB_WORKSPACE/tests/RunAutoTestViscous1_newRTA.sh
+      - name: Sampling Test static with shear viscosity (mu_B = 0, newRTA)
+        run: |
+          source venv/bin/activate
+          $GITHUB_WORKSPACE/tests/RunAutoTestViscous2_newRTA.sh
       - name: Sampling Test static with bulk viscosity (finite mu_B, 22 mom.)
         run: |
           source venv/bin/activate
